--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Calculator</h1>
+    <h1 style="color: aliceblue;">Calculator</h1>
     <div class="container">
       <div class="blank">
         <div class="dispNo"></div>
@@ -16,10 +16,10 @@
         <div class="onBox" style="background-color: red; color: white">
           <span class="on">ON</span>
         </div>
-        <div class="stBox" style="background-color: rgb(226, 224, 224)">
+        <div class="stBox" style="background-color: rgb(35, 57, 93)">
           <span class="status">🔴</span>
         </div>
-        <div class="box" style="background-color: rgb(226, 224, 224)">
+        <div class="box" style="background-color: rgb(35, 57, 93)">
           <span class="char"></span>
         </div>
         <div class="backBox"><span class="back">⬅</span></div>
